# issuebase

./: .env  .env.sample  .gitignore  Projects.toml  add-project.md  readme.md
backend/: .env.sample  .gitignore  Cargo.toml  Projects.toml  readme.md
backend/src/: cache.rs  get_issues.rs  github_api.rs  main.rs
frontend/: package-lock.json  package.json  readme.md  tsconfig.json
frontend/lib/: hasVisited.ts  revalidateTime.ts  usePersistedState.ts  useWindowWidth.ts
frontend/lib/api/: API_DOMAIN.ts  getTopicIssues.ts  getTopics.ts
frontend/lib/components/: Home.tsx  Issues.tsx  Layout.tsx  Loading.tsx  Project.tsx  Sidebar.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/[language]/: [categoryIdx].tsx
frontend/public/: site.webmanifest
frontend/styles/: Home.module.css  Issues.module.css  Project.module.css  Sidebar.module.css  globals.css
src/: get_issues.rs  github_api.rs  projects.rs
